""""""
module(
    name = "hotaosa",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "eigen", version = "3.4.0.bcr.2")
bazel_dep(name = "googletest", version = "1.16.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.9.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "ac-library",
    url = "https://github.com/atcoder/ac-library/releases/download/v1.5.1/ac-library.zip",
    sha256 = "6dc0becebba69bb523ce907a31966fe30d39098935ec6b4b5289c94e42634be1",
    build_file = "//third_party:BUILD.ac-library",
)
